testsuite/gsksl/errors/missing-endif-after-if-1.glsl
#if 1

void
main ()
{
}
